docs/v3.8.5/_sources/gallery/experiment/coreshell/coreshell_Qback_vs_corediameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/coreshell/coreshell_Qback_vs_corediameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_coreshell_coreshell_Qback_vs_corediameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_coreshell_coreshell_Qback_vs_corediameter.py:


CoreShell: Qback vs Core Diameter
=======================================

This example demonstrates how to compute and visualize the backscattering efficiency (Qback)
as functions of core diameter for CoreShell scatterers using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 10-11

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 11-42

.. code-block:: Python

    import numpy
    from PyMieSim.units import ureg

    from PyMieSim.experiment.scatterer import CoreShell
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material

    source = Gaussian(
        wavelength=[800, 900, 1000]
        * ureg.nanometer,  # Array of wavelengths: 800 nm, 900 nm, 1000 nm
        polarization=0 * ureg.degree,  # Linear polarization angle in radians
        optical_power=1e-3 * ureg.watt,  # 1 milliureg.watt
        NA=0.2 * ureg.AU,  # Numerical Aperture
    )

    scatterer = CoreShell(
        core_diameter=numpy.geomspace(100, 600, 400)
        * ureg.nanometer,  # Core diameters from 100 nm to 600 nm
        shell_thickness=800 * ureg.nanometer,  # Shell width of 800 nm
        core_refractive_index=Material.silver,  # Core material
        shell_refractive_index=Material.BK7,  # Shell material
        medium_refractive_index=1 * ureg.RIU,  # Surrounding medium's refractive index
        source=source,
    )

    experiment = Setup(scatterer=scatterer, source=source)

    dataframe = experiment.get("Qback")

    dataframe.plot(x="scatterer:core_diameter")



.. image-sg:: /gallery/experiment/coreshell/images/sphx_glr_coreshell_Qback_vs_corediameter_001.png
   :alt: coreshell Qback vs corediameter
   :srcset: /gallery/experiment/coreshell/images/sphx_glr_coreshell_Qback_vs_corediameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x500 with 1 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.335 seconds)


.. _sphx_glr_download_gallery_experiment_coreshell_coreshell_Qback_vs_corediameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coreshell_Qback_vs_corediameter.ipynb <coreshell_Qback_vs_corediameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coreshell_Qback_vs_corediameter.py <coreshell_Qback_vs_corediameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coreshell_Qback_vs_corediameter.zip <coreshell_Qback_vs_corediameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
