docs/v4.0.2/_sources/gallery/experiment/coreshell/coreshell_Qback_vs_corediameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/coreshell/coreshell_Qback_vs_corediameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_coreshell_coreshell_Qback_vs_corediameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_coreshell_coreshell_Qback_vs_corediameter.py:


CoreShell: Qback vs Core Diameter
=======================================

This example demonstrates how to compute and visualize the backscattering efficiency (Qback)
as functions of core diameter for CoreShell scatterers using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 10-11

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 11-46

.. code-block:: Python

    import numpy
    from PyMieSim.units import ureg

    from PyMieSim.experiment.scatterer_set import CoreShellSet
    from PyMieSim.experiment.source_set import GaussianSet
    from PyMieSim.experiment.polarization_set import PolarizationSet
    from PyMieSim.experiment import Setup
    from PyMieSim.material import print_available, SellmeierMaterial, TabulatedMaterial, SellmeierMedium

    print_available()

    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[800, 900, 1000] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2] * ureg.AU,
    )

    scatterer = CoreShellSet(
        core_diameter=numpy.geomspace(100, 900, 400) * ureg.nanometer,
        shell_thickness=[800] * ureg.nanometer,
        core_material=[TabulatedMaterial("silver")],
        shell_material=[SellmeierMaterial("BK7")],
        medium=[SellmeierMedium("water")],
    )

    experiment = Setup(scatterer_set=scatterer, source_set=source)

    dataframe = experiment.get("Qback")

    dataframe.plot(x="scatterer:core_diameter")



.. image-sg:: /gallery/experiment/coreshell/images/sphx_glr_coreshell_Qback_vs_corediameter_001.png
   :alt: coreshell Qback vs corediameter
   :srcset: /gallery/experiment/coreshell/images/sphx_glr_coreshell_Qback_vs_corediameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | SF11                  | pva                   |
    +-----------------------+-----------------------+
    | air                   | gold                  |
    +-----------------------+-----------------------+
    | test_sellmeier_file   | titanium              |
    +-----------------------+-----------------------+
    | soda_lime_glass       | zinc                  |
    +-----------------------+-----------------------+
    | crown                 | paladium              |
    +-----------------------+-----------------------+
    | BAK1                  | bismuth               |
    +-----------------------+-----------------------+
    | ZBLAN                 | polyetylene           |
    +-----------------------+-----------------------+
    | BAF10                 | aluminium             |
    +-----------------------+-----------------------+
    | pvc                   | silicon               |
    +-----------------------+-----------------------+
    | FK51A                 | sodium                |
    +-----------------------+-----------------------+
    | LASF9                 | calcium               |
    +-----------------------+-----------------------+
    | polystyren            | nickel                |
    +-----------------------+-----------------------+
    | SF10                  | test_tabulated_file   |
    +-----------------------+-----------------------+
    | fused_silica          | chromium              |
    +-----------------------+-----------------------+
    | germanium             | vanadium              |
    +-----------------------+-----------------------+
    | lithium_niobate       | tantalum              |
    +-----------------------+-----------------------+
    | water                 | magnesium             |
    +-----------------------+-----------------------+
    | SF5                   | example_tabulated     |
    +-----------------------+-----------------------+
    | BK7                   | copper                |
    +-----------------------+-----------------------+
    | argon                 | lead                  |
    +-----------------------+-----------------------+
    | ethanol               | iron                  |
    +-----------------------+-----------------------+
    | propanol              | tungsten              |
    +-----------------------+-----------------------+
    | ethylene              | silver                |
    +-----------------------+-----------------------+
    | acetylene             | rhodium               |
    +-----------------------+-----------------------+
    | cellulose             |                       |
    +-----------------------+-----------------------+
    | methane               |                       |
    +-----------------------+-----------------------+
    | flint                 |                       |
    +-----------------------+-----------------------+
    | acetone               |                       |
    +-----------------------+-----------------------+
    | polycarbonate         |                       |
    +-----------------------+-----------------------+
    | glycerol              |                       |
    +-----------------------+-----------------------+
    | ethane                |                       |
    +-----------------------+-----------------------+
    | polystyrene           |                       |
    +-----------------------+-----------------------+
    | example_sellmeier     |                       |
    +-----------------------+-----------------------+
    | methanol              |                       |
    +-----------------------+-----------------------+

    <Figure size 800x500 with 1 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.277 seconds)


.. _sphx_glr_download_gallery_experiment_coreshell_coreshell_Qback_vs_corediameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coreshell_Qback_vs_corediameter.ipynb <coreshell_Qback_vs_corediameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coreshell_Qback_vs_corediameter.py <coreshell_Qback_vs_corediameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coreshell_Qback_vs_corediameter.zip <coreshell_Qback_vs_corediameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
